# ouroboros-leios-sim

./: cabal.project
delta_q/notebooks/: Leios-DeltaQ.ipynb
delta_q/src/: delta_q.rs  render.rs
formal-spec/Leios/: Short.lagda.md
leios-conformance/: leios-conformance.cabal
leios-conformance/src/Leios/: Diffusion.hs  Environment.hs  Types.hs
leios-conformance/test/Leios/: DiffusionSpec.hs
sim-rs/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
sim-rs/sim-cli/src/: config.rs  events.rs
sim-rs/sim-core/: Cargo.toml
sim-rs/sim-core/src/: clock.rs  lib.rs  network.rs  sim.rs
sim-rs/sim-core/src/sim/: event_queue.rs
sim-rs/sim-web/: Cargo.toml
sim-rs/sim-web/src/: lib.rs
sim-rs/sim-web/wit/: world.wit
sim-rs/src/: index.ts
simulation/: ouroboros-leios-sim.cabal
simulation/src/: ChanTCP.hs  Main.hs  RelayProtocol.hs  SimRelay.hs  SimTCPLinks.hs  Viz.hs  VizSimRelay.hs
ui/: bun.lockb  package.json
ui/src/app/: page.tsx  queries.ts
ui/src/app/api/messages/batch/: route.ts  types.ts  utils.ts
ui/src/components/Graph/: GraphWapper.tsx  types.ts  worker.ts
ui/src/components/Graph/hooks/: queries.tsx  useGraphWorker.ts  useHandlers.ts  useStreamMessagesHandler.tsx
ui/src/components/Graph/modules/: Canvas.tsx  Chart.TransactionsSent.tsx
ui/src/components/Test/: Test.tsx
ui/src/contexts/GraphContext/: GraphContextProvider.tsx  context.ts  reducer.ts  types.ts
