cabal-version:      3.4
name:               leios-conformance
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Arnaud Bailly
maintainer:         arnaud@pankzsoft.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Leios.Diffusion
    -- other-modules:
    -- other-extensions:
    build-depends:    async
                    , base ^>=4.19.0.0
                    , bytestring <0.12
                    , containers
                    , stm
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable leios-conformance
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        leios-conformance

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite leios-conformance-test
    import:           warnings
    default-language: Haskell2010
    other-modules: Leios.DiffusionSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
                  QuickCheck,
                  base ^>=4.19.0.0,
                  leios-conformance
    build-tool-depends:
       hspec-discover:hspec-discover
    ghc-options: -rtsopts -threaded
